Fix description displayed only in one line on IE10

--- a/app/assets/stylesheets/content/_in_place_editing.sass
+++ b/app/assets/stylesheets/content/_in_place_editing.sass
@@ -221,6 +221,10 @@ a.inplace-editing--trigger-link,
       visibility: visible
 
 
+  // Otherwise the description will show up in one line on IE10
+  .inplace-edit--read-value
+    display: block
+
 .inplace-editing--container
   @include grid-block
   border-color: #fff
